--- a/style.css
+++ b/style.css
@@ -218,3 +218,102 @@ a:visited {
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
 }
+
+@media only screen and (max-width: 64em) {
+  body {
+    padding: 1.5rem;
+  }
+
+  .sidebar {
+    flex-basis: 20rem;
+    padding: 3rem;
+  }
+
+  .logo {
+    height: 4rem;
+    margin-bottom: 3rem;
+  }
+
+  .workout {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    gap: 0.75rem;
+  }
+
+  .workout__title {
+    font-size: 1.5rem;
+  }
+
+  .workout__icon {
+    font-size: 1.5rem;
+    margin-right: 0.1rem;
+  }
+
+  .workout__value {
+    margin-right: 0.2rem;
+  }
+
+  .form {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    gap: 0.5rem 1em;
+    height: 9rem;
+  }
+
+  .form.hidden {
+    padding: 0 1.5rem;
+  }
+
+  .form__label {
+    font-size: 1.3rem;
+  }
+
+  .form__input {
+    padding: 0.3rem 0.75rem;
+    font-size: 1.3rem;
+  }
+
+  .copyright {
+    font-size: 1.2rem;
+  }
+
+  .leaflet-popup .leaflet-popup-content {
+    font-size: 1.3rem;
+  }
+}
+
+@media only screen and (max-width: 40em) {
+  html {
+    font-size: 50%;
+  }
+
+  body {
+    padding: 0.5rem;
+    flex-direction: column;
+  }
+
+  .sidebar {
+    height: 35rem;
+  }
+
+  .logo {
+    margin-bottom: 2rem;
+  }
+
+  .form {
+    height: 8rem;
+  }
+
+  .form__label {
+    font-size: 1.4rem;
+  }
+
+  .copyright {
+    margin-top: 1rem;
+    font-size: 1.2rem;
+  }
+
+  .leaflet-popup .leaflet-popup-content {
+    font-size: 1.6rem;
+  }
+}
